# cmake-avr-gcc

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/Driver/: CMakeLists.txt  System.c  System.h
src/Driver/com/: UART.c  UART.h
src/Projects/: CMakeLists.txt
src/Projects/1/: CMakeLists.txt  main.c
src/Projects/2/: CMakeLists.txt  main.c
