SET(EXECUTABLE_NAME "Project1")

FILE(GLOB_RECURSE _SOURCES *.c)
FILE(GLOB_RECURSE _HEADERS *.h)
SOURCE_GROUP("Header Files" FILES ${_HEADERS})

ADD_EXECUTABLE(${EXECUTABLE_NAME}.elf ${_SOURCES} ${_HEADERS})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}.elf Driver)
ADD_CUSTOM_TARGET(${EXECUTABLE_NAME}.hex ALL avr-objcopy -O ihex ${EXECUTABLE_OUTPUT_PATH}/${EXECUTABLE_NAME}.elf ${EXECUTABLE_OUTPUT_PATH}/${EXECUTABLE_NAME}.hex)

